plugins {
  id 'org.beryx.jlink' version '2.1.1' // latest version that doesn't have a Java 11+ warning
}

ext {
  minJavaVersionForTests = JavaVersion.VERSION_1_9
}

apply from: "${rootDir}/gradle/java.gradle"

sourceCompatibility = "1.9"
targetCompatibility = "1.9"

mainClassName = 'datadog.smoketest.moduleapp.ModuleApplication'

jar {
  manifest {
    attributes(
      'Main-Class': 'datadog.smoketest.moduleapp.ModuleApplication'
    )
  }
}

jlink {
  moduleName = 'datadog.smoketest.moduleapp'
  options = ['--no-man-pages', '--no-header-files', '--add-modules', 'java.instrument']
}

test {
  dependsOn tasks.jlink
  jvmArgs "-Ddatadog.smoketest.module.image=${jlink.imageDir.get()}"
}

dependencies {
  testCompile project(':dd-smoke-tests')
}

